# OSC

./: cpuctl.c
GitVerse/z1/: .gitignore  CMakeLists.txt  README.md
GitVerse/z1/application/sysaudit/: CMakeLists.txt  main.cpp
GitVerse/z1/include/gitproc/: app.hpp  caps.hpp  cgroup.hpp  dependency.hpp  git.hpp  io.hpp  state.hpp  unit.hpp
GitVerse/z1/include/sysaudit/: filter.hpp  repo.hpp  util.hpp  watcher.hpp
GitVerse/z1/source/: CMakeLists.txt  app.cpp  caps.cpp  cgroup.cpp  filter.cpp  git.cpp  process.cpp  repo.cpp  state.cpp  util.cpp  watcher.cpp
GitVerse/z1/tests/: cli_repo_status_tests.cpp  deps_tests.cpp  execstop_and_http_health_tests.cpp  test_filter.cpp  test_integration_batch.cpp  test_repo.cpp
GitVerse/z2/: CMakeLists.txt  README.md
GitVerse/z2/application/: CMakeLists.txt
GitVerse/z2/application/gitconfig/: CMakeLists.txt  main.cpp
GitVerse/z2/application/gitconfigd/: CMakeLists.txt  http.hpp  main.cpp  router.cpp  router.hpp  server.cpp  server.hpp  sync_loop.cpp  sync_loop.hpp  util.hpp
GitVerse/z2/include/gitconfig/: conflict.hpp  handlers.hpp  history.hpp  http.hpp  kv.hpp  nodes.hpp  repo.hpp  router.hpp  sync.hpp
GitVerse/z2/source/: conflict.cpp  history.cpp  kv.cpp  nodes.cpp  repo.cpp  repo_git.cpp
GitVerse/z2/tests/: CMakeLists.txt  history_basic.cpp  kv_basic.cpp  sync_basic.cpp
GitVerse/z3/: CMakeLists.txt  README.md
GitVerse/z3/application/gitproc/: CMakeLists.txt  main.cpp
GitVerse/z3/cmake/: module.cmake
GitVerse/z3/include/gitproc/: app.hpp  caps.hpp  cgroup.hpp  cli.hpp  dependency.hpp  git.hpp  gitrepo.hpp  io.hpp  process.hpp  state.hpp  supervisor.hpp  unit.hpp  watcher.hpp
GitVerse/z3/source/: app.cpp  caps.cpp  cgroup.cpp  cli.cpp  git.cpp  gitrepo.cpp  io.cpp  process.cpp  state.cpp  supervisor.cpp  unit.cpp  watcher.cpp
GitVerse/z3/tests/: env_and_reload_tests.cpp  execstop_and_http_health_tests.cpp  git_watcher_tests.cpp  log_rotation_tests.cpp  process_basic_tests.cpp  rollback_tests.cpp  start_hooks_and_pidfile_tests.cpp  supervisor_policy_tests.cpp
SBER/z1/: CMakeLists.txt  README.md  readme.md
SBER/z1/include/: cache.hpp  config.hpp  exec.hpp  graph.hpp  json_writer.hpp  repoquery.hpp  solv_backend.hpp  thread_pool.hpp
SBER/z1/src/: cache.cpp  exec.cpp  graph.cpp  json_writer.cpp  main.cpp  repoquery.cpp  solv_backend.cpp  thread_pool.cpp
SBER/z1/web/static/: index.html
SBER/z2/: CMakeLists.txt  README.md
SBER/z2/application/: CMakeLists.txt
SBER/z2/application/uringkv/: CMakeLists.txt  main.cpp
SBER/z2/cmake/: module.cmake
SBER/z2/include/: kv.hpp  util.hpp  wal.hpp
SBER/z2/include/cache/: table_cache.hpp
SBER/z2/include/sst/: footer.hpp  index.hpp  manifest.hpp  reader.hpp  record.hpp  table.hpp  writer.hpp
SBER/z2/include/wal/: reader.hpp  record.hpp  segment.hpp  uring_backend.hpp  writer.hpp
SBER/z2/source/: CMakeLists.txt  kv.cpp  util.cpp  wal.cpp
SBER/z2/source/sst/: index.cpp  manifest.cpp  reader.cpp  table.cpp  writer.cpp
SBER/z2/source/wal/: reader.cpp  segment.cpp  uring_backend.cpp  writer.cpp
SBER/z2/tests/: CMakeLists.txt  compaction_basic.cpp  flush_recovery.cpp  iter1_smoke.cpp  no_deadlock_on_close.cpp  recovery.cpp  scan.cpp  smoke.cpp  smoke2.cpp  sst_index_seek.cpp  sst_scan.cpp  table_cache_smoke.cpp  uring_flag.cpp  wal_alignment_trailer.cpp  wal_block_alignment.cpp  wal_corruption.cpp  wal_group_commit.cpp  wal_purge_after_flush.cpp  wal_purge_header_only.cpp  wal_rotation_cleanup.cpp  wal_torn_write_stop.cpp
SBER/z3/: CMakeLists.txt  README.md
SBER/z3/application/: CMakeLists.txt
SBER/z3/application/secmem-agent/: CMakeLists.txt  main.cpp
SBER/z3/application/secmemctl/: CMakeLists.txt  main.cpp
SBER/z3/include/secmem/: agent.hpp  common.hpp  crypto.hpp  ipc.hpp  metrics.hpp  proto.hpp  secure.hpp  server.hpp  storage.hpp
SBER/z3/source/: CMakeLists.txt  agent.cpp  crypto.cpp  ipc.cpp  metrics.cpp  secure.cpp  server.cpp  storage.cpp
SBER/z3/tests/: CMakeLists.txt
ScalaR/Задача 1/: Makefile  README.md  cpuctl.c
ScalaR/Задача 2/: README.md  hwpoison_ctl.c
z1/: Makefile  README.md
z2/: Makefile  hwpoison_ctl.c
